[package]
name = "password-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prettytable = "0.10.0"
bcrypt = "0.15.0"
nix = "0.27.0"
libc = "0.2.80"
whoami = "1.4.1"
colored = "2.1.0"
csv = "1.3"
aes = "0.8.4"
hex = "0.4.3"
crypto = "0.5.1"